--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
                 <input type="number" id="age" placeholder="User Age" min="1" step="0.5" >
                 <p id="msg"></p>
                 <button type="button" id="btn">Add Users</button>
-                <input   onkeyup="searchData(this.value)" type="search" id="search" name="search" placeholder="Search">
-           
+                <span class="searchReset">
+                    <input   onkeyup ="searchData(this.value)" type="search" id="search" name="search" placeholder="Search" >
+                    <span    onclick ="resetData()"> x </span>
+                </span>
+
             <ul id="usersList"></ul>
         </div>
    
@@ -26,3 +29,5 @@
     <script src="./main.js"></script>
 </body>
 </html>
+
+
